<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SQLite Database</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="add_user">Add User</string>
    <string name="import_users">Import Users</string>
    <string name="view_all">View All</string>
    <string name="save_updates">Save Updates</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email_address">Email Address</string>
    <string name="name">Name</string>
    <string name="user_application">User Application</string>

</resources>
